--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
 </head>
 
 <body>
-    <main>    
+    <main class="main">    
     <header class="header">
-        <img class="photo" src="assets/img/my-photo.png" alt="Foto de Roberto feita por inteligencia artificial no estilo cyber-punk">
+        <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
         <h1 class="title">
-           Ola, <br> Eu sou <br>Roberto C A Junior
+           Ola, <br> Eu sou <br><span id="profile.name">Carregando...</span> 
         </h1>
+
         <div class="information">
-            <p class="job">Junior Developer</p>
-            <p class="location">Matinhos - PR - BR</p>
+            <p class="job" id="profile.job">Carregando...</p>
+            <p class="location" id="profile.location">Carregando...</p>
             <p class="phone">
-                <a href="tel: (41) 9 9573-1599">(41) 9 9573-1599</a> 
+                <a href="tel: ..." id="profile.phone">Carregando...</a> 
             </p>
             <p class="email">
-                <a href="mailto: robertokorzun@hotmail.com">robertokorzun@hotmail.com</a>
+                <a href="mailto: ..." id="profile.email">Carregando...</a>
             </p>
         </div>
     </header>
@@ -53,39 +54,18 @@
                 <div class="skills">
                     <section class="tools">
                         <h3>Habilidades profissionais:</h3>
-                        <ul>
-                            <li>
-                                <img src="./assets/img/icons/skills/java-script.svg" alt="javascript" title="javascript">
-                            </li>
-                            <li>
-                                <img src="./assets/img/icons/skills/react.svg" alt="react" title="react">
-                            </li>
-                            <li>
-                                <img src="./assets/img/icons/skills/typescipt.svg" alt="typescript" title="typescript">
-                            </li>
-                            <li>
-                                <img src="./assets/img/icons/skills/java.svg" alt="java" title="java">
-                            </li>
-                            <li>
-                                <img src="./assets/img/icons/skills/php.svg" alt="php" title="php">
-                            </li>
-                            <li>
-                                <img src="./assets/img/icons/skills/docker.svg" alt="docker" title="docker">
-                            </li>
-                            <li>
-                                <img src="./assets/img/icons/skills/git.svg" alt="git" title="git">
-                            </li>
+                        <ul id="profile.skills.hardSkills">
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
                         </ul>
                     </section>
                     <section class="personal">
                         <h3>Habilidades Pessoais:</h3>
-                        <ul>
-                            <li>Organização e Planejamento</li>
-                            <li>Trabalho em equipe</li>
-                            <li>Facilidade em comunicação</li>
-                            <li>Boas Habilidades de Escrita</li>
-                            <li>Flexibilidade e Criatividade</li>
-                            <li>Inteligencia Emocional</li>
+                        <ul id="profile.skills.softSkills">
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
                         </ul>
                     </section>
                 </div>
@@ -97,11 +77,8 @@
                     <h2>Idiomas</h2>
             </button>
             <div class="content">
-                <ul class="languages">
-                    <li>Português(BR)</li>
-                    <li>Inglês (Avançado)</li>
-                    <li>Francês (Básico)</li>
-                    <li>Espanhol (Básico)</li>
+                <ul class="languages" id="languages">
+                    <li>Carregando...</li>
                 </ul>
             </div>
         </section>
@@ -111,18 +88,10 @@
                     <h2>Portfolio</h2>
             </button>
             <div class="content">
-                <ul class="portfolio">
+                <ul class="portfolio" id="portfolio">
                     <li>
-                        <span class="title github"> Pokedex em JavaScript com a POKE-API</span>
+                        <h3 class="github"></h3>
                         <a href="https://www.google.com.br" target="_blank"> Link1</a>
-                    </li>
-                    <li>
-                        <span class="title github"> Landpage UpsideDown</span>
-                        <a href="https://www.google.com.br" target="_blank"> Link2</a>
-                    </li>
-                    <li>
-                        <span class="title github"> (TCC) CMS para site IFPR</span>
-                        <a href="https://www.google.com.br" target="_blank"> Link3</a>
                     </li>
                 </ul>
                 
@@ -134,26 +103,15 @@
                    <h2>Experiência profissional</h2>
             </button>
             <div class="content">
-                <ul class="experience">
-                    <li>
-                        <h3 class="title">Atendimento ao Cliente / Caioba Telecom</h3>
-                        <p class="period">Dezembro 2020 - Janeiro 2021</p>
-                        <p> 
-                            Prestei assistência aos clientes com suporte à conexão com a Internet, solução de problemas relacionados a modems, cabos, roteadores e outros assuntos técnicos.
-                            Conduzi o suporte ao cliente por telefone, e-mail e chat, fornecendo orientações técnicas e problemas claros e concisos para a resolução do problema.
-                            Ferramentas de software utilizadas para rastreamento de chamadas e registro de informações de suporte.
-                            Trabalhei em equipe com outros membros do suporte técnico para garantir uma resolução de problemas rápida e eficiente.
-                            Tecnologias utilizadas: modems, cabos, roteadores e outras soluções de conectividade de rede.
-                        </p>
-                    </li>
+                <ul class="experience" id="professionalExperience">
+                    <li>Carregando...</li>
                 </ul>
-                
             </div>
         </section>
     </main>
 
-    <script src="/assets/js/api.js"></script>
     <script src="/assets/js/acordeon.js"></script>
+    <script src="/assets/js/api.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 
