--- a/index.html
+++ b/index.html
@@ -53,15 +53,21 @@
             <div class="content">
                 <div class="skills">
                     <section class="tools">
-                        <h3>Habilidades profissionais:</h3>
+                        <h3>Development Languages:</h3>
                         <ul id="profile.skills.hardSkills">
                             <li>Carregando...</li>
                             <li>Carregando...</li>
                             <li>Carregando...</li>
                         </ul>
+                            <h3>Frameworks and Tools:</h3>
+                            <ul id="profile.skills.frameworks">
+                                <li>Carregando...</li>
+                                <li>Carregando...</li>
+                                <li>Carregando...</li>
+                            </ul>
                     </section>
                     <section class="personal">
-                        <h3>Habilidades Pessoais:</h3>
+                        <h3>Soft Skills:</h3>
                         <ul id="profile.skills.softSkills">
                             <li>Carregando...</li>
                             <li>Carregando...</li>
