portfolio and job-exp update

--- a/index.html
+++ b/index.html
@@ -53,8 +53,16 @@
             <div class="content">
                 <div class="skills">
                     <section class="tools">
+
+                        <h3>Hard Skills:</h3>
                         <h3>Development Languages:</h3>
                         <ul id="profile.skills.hardSkills">
+                            <h3>Development Languages:</h3>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                        <ul id="profile.skills.frameworks"></ul>
+                            <h3>Frameworks and Tools:</h3>
                             <li>Carregando...</li>
                             <li>Carregando...</li>
                             <li>Carregando...</li>
